# optimusenv

./: .gitignore  Dockerfile  README.md  __init__.py  agent.md  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  testing_guide.md
app/: environment.py  graders.py  main.py  models.py  policy.py  simulator.py  tasks.py
app/static/: index.css  index.html  index.js
baseline/: run_baseline.py
optimusenv/: __init__.py  action.py  env.py
server/: Dockerfile  __init__.py  app.py  requirements.txt
